# GitPlayground

./: .env.example  .gitignore  .semgrepignore  AGENTS.md  Dockerfile  Dockerfile.sandbox  README.md  docker-compose.yml  manage.py  pyproject.toml  trivy.yaml
.cursor/agents/: code-reviewer.md  design-system.md  django-developer.md  fullstack-developer.md  git-professional.md  refactoring-specialist.md  security-auditor.md  security-engineer.md  ui-designer.md
.cursor/rules/: english-comments.mdc  git-push-before-todo.mdc
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml  playground-e2e.yml  security.yml
apps/achievements/: admin.py  apps.py  models.py  services.py
apps/core/: client_errors.py  forms.py  middleware.py  playground_limits.py  terminal_paste.py  urls.py
apps/progress/: admin.py  apps.py  models.py  signals.py
apps/quiz/: admin.py  apps.py  concept_questions.py  difficulty.py  models.py  progit_questions.py  prompt_quality.py  question_generator.py  urls.py  views.py
apps/sandbox/: admin.py  apps.py  models.py  tasks.py
apps/tasks/: admin.py  admin_views.py  importer.py  level0_theory.py  models.py  task_descriptions.py  task_hints.py  task_registry.py  task_theory.py  terminal_validators.py  tests.py  theory_content.py
docs/: API.md  DEPLOY.md  FRONTEND.md  OPERATIONS.md  PRODUCT.md  README.md  REFACTOR_BACKLOG.md  VALIDATOR_CONTRACT.md
e2e/: package.json  playwright.config.ts
gitplayground/: asgi.py  celery.py  env.py  settings.py  urls.py  wsgi.py
scripts/: analyze_quiz_difficulty.py  generate_favicon.py
(+138 files in other folders)
